# rice-mill-fsms

./: .gitignore  INSTRUCTION_MANUAL.md  README.md  USER_GUIDE.md  audit_log.txt  database.py  doc-controller.skill  doc_controller.py  document_generator.py  fastapi-route-wizard.skill  fsms-task-extractor.skill  gap_analyzer.py  iso-gap-analyzer.skill  main.py  models.py  pyproject.toml  pytest-inspector.skill  sqlmodel-architect.skill  task_extractor.py  task_extractor_config.json
.claude/skills/doc-controller/: SKILL.md
.claude/skills/doc-controller/references/: doc_controller_template.py
.claude/skills/fastapi-route-wizard/: SKILL.md
.claude/skills/fastapi-route-wizard/references/: main_template.py
.claude/skills/fsms-task-extractor/: SKILL.md
.claude/skills/iso-gap-analyzer/: SKILL.md
.claude/skills/iso-gap-analyzer/references/: gap_analyzer_template.py  iso_22001_clauses.py
.claude/skills/pytest-inspector/: SKILL.md
.claude/skills/pytest-inspector/references/: test_api_template.py  test_models_template.py  test_workflow_template.py
.claude/skills/sqlmodel-architect/: SKILL.md
.claude/skills/sqlmodel-architect/references/: database_template.py  models_template.py
project_intro/: complete_skills_architecture.md  project_assessment.md
tests/: conftest.py
