[project]
name = "rice-mill-fsms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.11",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.7",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
